[gd_scene load_steps=2 format=3 uid="uid://bf2m6g8fuvyo5"]

[ext_resource type="Script" path="res://Scripts/Player/action_finder.gd" id="1_k6jiw"]

[node name="ActionFinder" type="Area2D"]
collision_layer = 0
collision_mask = 512
script = ExtResource("1_k6jiw")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
